cabal-version: 3.0
name:          vnc
version:       0.1.0.0
license:       MIT
license-file:  LICENSE
author:        Deven Speyrer
build-type:    Simple

executable vnc
    main-is:          Main.hs
    hs-source-dirs:   src
    other-modules:
        DES
        DES2

    default-language: GHC2021
    ghc-options:      -Wall
    build-depends:
        base ^>=4.18.3.0,
        network >=3.2.8 && <3.3,
        bytestring,
        binary,
        random
